src/interpret_ast/snapshots/vfpl__interpret_ast__test__double_initialize_global_variable.snap
---
source: src/interpret_ast/test.rs
expression: state

---
(
    Vm {
        current_env: RefCell {
            value: Env {
                outer: None,
                vars: {
                    "uwu": Absent,
                    "print": Fn(
                        RefCell {
                            value: RuntimeFn {
                                params: [
                                    (
                                        "value",
                                        Any,
                                    ),
                                ],
                                ret_ty: Absent,
                                body: [native code],
                                captured_env: RefCell {
                                    value: Env {
                                        outer: None,
                                        vars: {},
                                    },
                                },
                            },
                        },
                    ),
                },
            },
        },
        call_stack: [],
        recur_depth: 0,
    },
    Ok(
        (),
    ),
)
